--- a/stanfordcoreNLP.ipynb
+++ b/stanfordcoreNLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDLfUVralpN3KkseVZOMU/",
+      "authorship_tag": "ABX9TyOrynfV7sRNyIQtRykkgeiY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -985,12 +985,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"tes\")"
+      ],
       "metadata": {
-        "id": "NJ7isMqo1oFO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NJ7isMqo1oFO",
+        "outputId": "eb585d17-28a8-41fe-d20a-a0229a62ddcd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tes\n"
+          ]
+        }
+      ]
     }
   ]
 }
